--- a/src/pages/list-savings/list-savings.html
+++ b/src/pages/list-savings/list-savings.html
@@ -69,7 +69,7 @@
       <ion-row>
         <ion-col>
 
-          <button ion-button clear small (click)="showDetails(saving.id);">
+          <button ion-button clear small (click)="showDetails(saving);">
             <ion-icon name="list-box"></ion-icon>
             <div> Details</div>
           </button>
