--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,10 @@
     <ion-title style="text-align:center;">
       Transactions
     </ion-title>
-    <ion-buttons end>
+    <ion-buttons end>      
+      <button ion-button icon-only (click)=onExport();>
+          <ion-icon name="document"></ion-icon>
+      </button>
       <button ion-button icon-only (click)=doFilter();>
           <ion-icon name="search"></ion-icon>
       </button>
