Bug Fixing and social share

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -62,6 +62,10 @@
           <ion-icon name="trash"></ion-icon>
           Delete
         </button>
+        <button ion-button color="secondary" icon-left (click)="onShareWhatsApp(expense);">
+          <ion-icon name="logo-whatsapp"></ion-icon>
+          Share
+        </button>
       </ion-item-options>
     </ion-item-sliding>
 
