--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -62,7 +62,7 @@
           <ion-icon name="trash"></ion-icon>
           Delete
         </button>
-        <button ion-button color="secondary" icon-left (click)="onShareWhatsApp(expense);">
+        <button ion-button color="add-item" icon-left (click)="onShareWhatsApp(expense);">
           <ion-icon name="logo-whatsapp"></ion-icon>
           Share
         </button>
