--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -12,6 +12,9 @@
     </button>
     <ion-title style="text-align:center;">Dashboard</ion-title>
     <ion-buttons end>
+       <button ion-button icon-only (click)=onExport();>
+          <ion-icon name="document"></ion-icon>
+      </button>
       <button ion-button icon-only (click)="doFilter();">
           <ion-icon name="search"></ion-icon>
       </button>
