--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -6,7 +6,7 @@
     </button>
     <ion-title style="text-align:center;">Dashboard</ion-title>
     <ion-buttons end>
-       <button ion-button icon-only (click)=onExport();>
+       <button ion-button icon-only (click)="onExport();">
           <ion-icon name="document"></ion-icon>
       </button>
       <button ion-button icon-only (click)="doFilter();">
