--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
     </ion-title>
     <ion-buttons end>      
       <button ion-button icon-only (click)=onExport();>
-          <ion-icon name="document"></ion-icon>
+          <ion-icon name="md-mail"></ion-icon>
       </button>
       <button ion-button icon-only (click)=doFilter();>
           <ion-icon name="search"></ion-icon>
