--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title style="text-align:center;">
-      Transactions
+      {{ 'TRANSACTIONS_TITLE' | translate }}
     </ion-title>
     <ion-buttons end>      
       <button ion-button icon-only (click)=onExport();>
@@ -27,17 +27,17 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <p>Incomes</p>
+        <p>{{ 'INCOMES' | translate }}</p>
         <h3 *ngIf="expense"> {{ expense.totalIncomes | currency: 'USD': true }} </h3>
       </ion-col>
       <ion-col>
-        <p>Expenses</p>
+        <p>{{ 'EXPENSES' | translate }}</p>
         <h3 *ngIf="expense"> {{ expense.totalExpenses | currency: 'USD': true }} </h3>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <p>Balance</p>
+        <p>{{ 'BALANCE' | translate }}</p>
         <h3 *ngIf="expense"> {{ expense.balance | currency: 'USD': true }} </h3>
       </ion-col>
     </ion-row>
@@ -60,11 +60,11 @@
       <ion-item-options>
         <button ion-button color="danger" icon-left (click)="onTrash(expense);">
           <ion-icon name="trash"></ion-icon>
-          Delete
+          {{ 'DELETE' | translate }}
         </button>
         <button ion-button color="add-item" icon-left (click)="onShareWhatsApp(expense);">
           <ion-icon name="logo-whatsapp"></ion-icon>
-          Share
+          {{ 'SHARE' | translate }}
         </button>
       </ion-item-options>
     </ion-item-sliding>
