--- a/src/pages/credits/credits.html
+++ b/src/pages/credits/credits.html
@@ -4,7 +4,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title style="text-align:center;">Credits</ion-title>
+    <ion-title style="text-align:center;">{{ 'CREDITS' | translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
