--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,24 +1,29 @@
-<!--
-  Generated template for the Settings page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar color="header">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title style="text-align:center;"> {{ 'SETTINGS' | translate}} </ion-title>    
+    <ion-title style="text-align:center;"> {{ 'SETTINGS' | translate}} </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-item>
-    <ion-label color="primary" stacked>{{ "LANGUAGE" | translate }}</ion-label>
-    <ion-select [(ngModel)]="language">
-      <ion-option value="es">Spanish</ion-option>
-      <ion-option value="en">English</ion-option>
-    </ion-select>
-  </ion-item>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col col-3>
+        <ion-label color="primary" stacked>{{ "LANGUAGE" | translate }}</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-label color="primary" stacked>{{ "LANGUAGE" | translate }}</ion-label>
+          <ion-select [(ngModel)]="language">
+            <ion-option value="es">Spanish</ion-option>
+            <ion-option value="en">English</ion-option>
+          </ion-select>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
