--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -12,7 +12,7 @@
   <ion-grid>
     <ion-row>
       <ion-col col-3>
-        <ion-label color="primary" stacked>{{ "LANGUAGE" | translate }}</ion-label>
+        {{ "LANGUAGE" | translate }}
       </ion-col>
       <ion-col>
         <ion-item>
