--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -11,7 +11,7 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col>
+      <ion-col col-3>
        <p> {{ "LANGUAGE" | translate }} </p>
       </ion-col>
       <ion-col>
