--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,37 +1,31 @@
-<ion-header>  
+<ion-header>
 </ion-header>
 <ion-content padding>
-   <br>
-   <br>
-   <br>
+  <br>
+  <br>
+  <br>
   <form #f="ngForm">
-      <ion-list>
-        <ion-item>
-          <ion-label floating>Username</ion-label>
-          <ion-input type="text" [(ngModel)]="user" name="user" required></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label floating>Password</ion-label>
-          <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
-        </ion-item>
+    <ion-list>
+      <ion-item>
+        <ion-label floating>Username</ion-label>
+        <ion-input type="text" [(ngModel)]="user" name="user" required></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>Password</ion-label>
+        <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
+      </ion-item>
     </ion-list>
     <div padding>
-        <button ion-button color="light" block (click)=singIn();>Sign In</button>
-    </div>   
-     <br>
-     <br>
-     <br>
-     <ion-fab buttom center  >
-        <button ion-fab color="light">  <ion-icon name="finger-print"></ion-icon></button>
-        <ion-fab-list side="left">
-          <button ion-fab (click)="onFacebookLogin();" > <ion-icon name="logo-facebook"></ion-icon></button>
-        </ion-fab-list>  
-        <ion-fab-list side="right">
-          <button ion-fab ><ion-icon name="logo-twitter"></ion-icon></button>
-          </ion-fab-list> 
-          <ion-fab-list side="buttom">
-          <button ion-fab (click)="onGoogleLogin();"> <ion-icon name="logo-googleplus"></ion-icon></button>
-        </ion-fab-list>  
-  </ion-fab>
+      <button ion-button color="light" block (click)=singIn();>Sign In</button>
+    </div>
+    <div padding>
+      <button ion-button block color="blue-item" (click)="onFacebookLogin();"><ion-icon left name="logo-facebook"></ion-icon>
+           CONECTAR CON FACEBOOK
+      </button>
+      <br>
+      <button ion-button block color="add-item" (click)="onCreateProfile();">
+        CREAR NUEVO USUARIO
+      </button>
+    </div>
   </form>
 </ion-content>
