Adding login authentication with firebase email and password!

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -12,7 +12,7 @@
     </ion-refresher>
     <ion-list>
       <ion-item>
-        <ion-label floating>Nombre</ion-label>
+        <ion-label floating></ion-label>        
         <ion-input type="text" [(ngModel)]="profile.name" name="name" required></ion-input>
       </ion-item>
       <ion-item>
@@ -20,11 +20,11 @@
         <ion-input type="text" [(ngModel)]="profile.email" name="email" required></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label floating>Contraseña</ion-label>
+        <ion-label floating>Password</ion-label>
         <ion-input type="text" [(ngModel)]="profile.password" name="password" required></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label floating>Repetir Contraseña</ion-label>
+        <ion-label floating>Repetir Password</ion-label>
         <ion-input type="text" [(ngModel)]="profile.repeatpassword" name="repeatpassword" required></ion-input>
       </ion-item>
     </ion-list>
