--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -77,4 +77,5 @@
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
+  <ion-nav [root]="rootPage" #content swipeBackEnabled="{{disableGestorBack}}"></ion-nav>
 </ion-content>
