--- a/src/pages/calculator/calculator.html
+++ b/src/pages/calculator/calculator.html
@@ -4,7 +4,7 @@
     <button ion-button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title style="text-align:center;">Calculator</ion-title>
+    <ion-title style="text-align:center;">{{ 'CALCULATOR' | translate}}</ion-title>
     <ion-buttons end>
       <button ion-button ion-button icon-only (click)="closeModal();">
           <ion-icon name="checkmark"></ion-icon>
