--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,7 @@
   <form #f="ngForm">
     <ion-list>
       <ion-item>
-        <ion-label floating>Username</ion-label>
+        <ion-label floating>Email</ion-label>
         <ion-input type="text" [(ngModel)]="user" name="user" required></ion-input>
       </ion-item>
       <ion-item>
@@ -16,7 +16,7 @@
       </ion-item>
     </ion-list>
     <div padding>
-      <button ion-button color="light" block (click)=singIn();>Sign In</button>
+      <button ion-button color="light" block (click)=singIn();>Ingresar</button>
     </div>
     <div padding>
       <button ion-button block color="blue-item" (click)="onFacebookLogin();"><ion-icon left name="logo-facebook"></ion-icon>
