Adding translate and fixing configuration

--- a/src/pages/modal-colors/modal-colors.html
+++ b/src/pages/modal-colors/modal-colors.html
@@ -4,7 +4,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title style="text-align:center;">Choose Color</ion-title>
+    <ion-title style="text-align:center;">{{ 'CHOOSE_COLOR' | translate }}</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="closeModal();">
           <ion-icon name="close"></ion-icon>
